readme for ui-grid

--- a/angular-ui-grid/imports/components/scatterplot/plot.html
+++ b/angular-ui-grid/imports/components/scatterplot/plot.html
@@ -1,7 +1,11 @@
 <header>
-  <h1>Scatter plot</h1>
+  <h1>Manual</h1>
 </header>
  
+<p>
+	This text preceds the table designed manually.
+</p>
+
 <table width="20%" align="center">
 	<!-- header row -->
 	<tr>
