--- a/reactDataGrid/client/main.css
+++ b/reactDataGrid/client/main.css
@@ -1,1 +1,29 @@
 /* CSS declarations go here */
+body {
+  font-family: sans-serif;
+  background-color: aliceblue;
+  background-attachment: fixed;
+ 
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+ 
+  font-size: 14px;
+}
+
+.new-experiment input {
+  box-sizing: border-box;
+  padding: 10px 0;
+  background: lightgrey;
+  border: none;
+  width: 90%;
+  padding-left: 20px;
+  padding-right: 80px;
+  font-size: 1em;
+  margin-left:5%;
+  margin-right:5%;
+}
